src/MiniJavaParser/MiniJavaParser.java
/* Generated By:JavaCC: Do not edit this line. MiniJavaParser.java */
  package MiniJavaParser;
  public class MiniJavaParser implements MiniJavaParserConstants {
          
/************************************
 * The MiniJava Grammar Starts Here *
 ************************************/
  static final public void Goal() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IMPORT:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      ImportDeclaration();
    }
    MainClass();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
      TypeDeclaration();
    }
    jj_consume_token(0);
  }

  static final public void ImportDeclaration() throws ParseException {
    if (jj_2_1(2)) {
      SingleImportDeclaration();
    } else if (jj_2_2(3)) {
      MultipleImportDeclaration();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void SingleImportDeclaration() throws ParseException {
    jj_consume_token(IMPORT);
    TypeName();
    jj_consume_token(SEMICOLON);
  }

  static final public void MultipleImportDeclaration() throws ParseException {
    jj_consume_token(IMPORT);
    TypeName();
    jj_consume_token(DOT);
    jj_consume_token(53);
    jj_consume_token(SEMICOLON);
  }

  static final public void TypeName() throws ParseException {
    Identifier();
    label_3:
    while (true) {
      if (jj_2_3(2)) {
        ;
      } else {
        break label_3;
      }
      jj_consume_token(DOT);
      Identifier();
    }
  }

  static final public void MainClass() throws ParseException {
    jj_consume_token(CLASS);
    Identifier();
    jj_consume_token(LBRACE);
    jj_consume_token(PUBLIC);
    jj_consume_token(STATIC);
    jj_consume_token(VOID);
    jj_consume_token(MAIN);
    jj_consume_token(LPAREN);
    jj_consume_token(STRING);
    jj_consume_token(LSQPAREN);
    jj_consume_token(RSQPAREN);
    Identifier();
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    PrintStatement();
    jj_consume_token(RBRACE);
    jj_consume_token(RBRACE);
  }

  static final public void TypeDeclaration() throws ParseException {
    if (jj_2_4(3)) {
      ClassDeclaration();
    } else if (jj_2_5(4)) {
      ClassExtendsDeclaration();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void ClassDeclaration() throws ParseException {
    jj_consume_token(CLASS);
    Identifier();
    jj_consume_token(LBRACE);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOLEAN:
      case INTEGER:
      case CHAR:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_4;
      }
      VarDeclaration();
    }
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PUBLIC:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_5;
      }
      MethodDeclaration();
    }
    jj_consume_token(RBRACE);
  }

  static final public void ClassExtendsDeclaration() throws ParseException {
    jj_consume_token(CLASS);
    Identifier();
    jj_consume_token(EXTENDS);
    Identifier();
    jj_consume_token(LBRACE);
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOLEAN:
      case INTEGER:
      case CHAR:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_6;
      }
      VarDeclaration();
    }
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PUBLIC:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_7;
      }
      MethodDeclaration();
    }
    jj_consume_token(RBRACE);
  }

  static final public void VarDeclaration() throws ParseException {
    Type();
    Identifier();
    jj_consume_token(SEMICOLON);
  }

  static final public void MethodDeclaration() throws ParseException {
    jj_consume_token(PUBLIC);
    Type();
    Identifier();
    jj_consume_token(LPAREN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BOOLEAN:
    case INTEGER:
    case CHAR:
    case IDENTIFIER:
      FormalParameterList();
      break;
    default:
      jj_la1[6] = jj_gen;
      ;
    }
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    label_8:
    while (true) {
      if (jj_2_6(2)) {
        ;
      } else {
        break label_8;
      }
      VarDeclaration();
    }
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACE:
      case IF:
      case WHILE:
      case WHITCH:
      case PRINT:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_9;
      }
      Statement();
    }
    jj_consume_token(RETURN);
    Expression();
    jj_consume_token(SEMICOLON);
    jj_consume_token(RBRACE);
  }

  static final public void FormalParameterList() throws ParseException {
    FormalParameter();
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 54:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_10;
      }
      FormalParameterRest();
    }
  }

  static final public void FormalParameter() throws ParseException {
    Type();
    Identifier();
  }

  static final public void FormalParameterRest() throws ParseException {
    jj_consume_token(54);
    FormalParameter();
  }

  static final public void Type() throws ParseException {
    if (jj_2_7(3)) {
      SimpleType();
    } else if (jj_2_8(2147483647)) {
      ArrayType();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        Identifier();
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void SimpleType() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CHAR:
      CharType();
      break;
    case BOOLEAN:
      BooleanType();
      break;
    case INTEGER:
      IntegerType();
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void ArrayType() throws ParseException {
    SimpleType();
    jj_consume_token(LSQPAREN);
    jj_consume_token(RSQPAREN);
  }

  static final public void CharType() throws ParseException {
    jj_consume_token(CHAR);
  }

  static final public void BooleanType() throws ParseException {
    jj_consume_token(BOOLEAN);
  }

  static final public void IntegerType() throws ParseException {
    jj_consume_token(INTEGER);
  }

  static final public void Statement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LBRACE:
      Block();
      break;
    default:
      jj_la1[11] = jj_gen;
      if (jj_2_9(2)) {
        AssignmentStatement();
      } else if (jj_2_10(2)) {
        ArrayAssignmentStatement();
      } else if (jj_2_11(2147483647)) {
        IfStatement();
      } else if (jj_2_12(2147483647)) {
        IfElseStatement();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case WHILE:
          WhileStatement();
          break;
        case WHITCH:
          SwitchStatement();
          break;
        case PRINT:
          PrintStatement();
          break;
        default:
          jj_la1[12] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
  }

  static final public void Block() throws ParseException {
    jj_consume_token(LBRACE);
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACE:
      case IF:
      case WHILE:
      case WHITCH:
      case PRINT:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[13] = jj_gen;
        break label_11;
      }
      Statement();
    }
    jj_consume_token(RBRACE);
  }

  static final public void AssignmentStatement() throws ParseException {
    Identifier();
    jj_consume_token(ASSIGN);
    AssigmentRest();
    jj_consume_token(SEMICOLON);
  }

  static final public void ArrayAssignmentStatement() throws ParseException {
    Identifier();
    jj_consume_token(LSQPAREN);
    Expression();
    jj_consume_token(RSQPAREN);
    jj_consume_token(ASSIGN);
    AssigmentRest();
    jj_consume_token(SEMICOLON);
  }

  static final public void AssigmentRest() throws ParseException {
    if (jj_2_13(2147483647)) {
      Expression();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LPAREN:
        jj_consume_token(LPAREN);
        Type();
        jj_consume_token(RPAREN);
        jj_consume_token(55);
        jj_consume_token(LPAREN);
        jj_consume_token(RPAREN);
        break;
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void IfStatement() throws ParseException {
    jj_consume_token(IF);
    jj_consume_token(LPAREN);
    Expression();
    jj_consume_token(RPAREN);
    Statement();
  }

  static final public void IfElseStatement() throws ParseException {
    jj_consume_token(IF);
    jj_consume_token(LPAREN);
    Expression();
    jj_consume_token(RPAREN);
    Statement();
    jj_consume_token(ELSE);
    Statement();
  }

  static final public void WhileStatement() throws ParseException {
    jj_consume_token(WHILE);
    jj_consume_token(LPAREN);
    Expression();
    jj_consume_token(RPAREN);
    Statement();
  }

  static final public void SwitchStatement() throws ParseException {
    jj_consume_token(WHITCH);
    jj_consume_token(LPAREN);
    Identifier();
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    jj_consume_token(CASE);
    IntegerType();
    jj_consume_token(56);
    jj_consume_token(LBRACE);
    label_12:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACE:
      case IF:
      case WHILE:
      case WHITCH:
      case PRINT:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[15] = jj_gen;
        break label_12;
      }
      Statement();
    }
    jj_consume_token(RBRACE);
    jj_consume_token(RBRACE);
  }

  static final public void PrintStatement() throws ParseException {
    jj_consume_token(PRINT);
    jj_consume_token(LPAREN);
    Expression();
    jj_consume_token(RPAREN);
    jj_consume_token(SEMICOLON);
  }

  static final public void Expression() throws ParseException {
    if (jj_2_14(2147483647)) {
      AndExpression();
    } else if (jj_2_15(2147483647)) {
      OrExpression();
    } else if (jj_2_16(2147483647)) {
      EqualExpression();
    } else if (jj_2_17(2147483647)) {
      GreatExpression();
    } else if (jj_2_18(2147483647)) {
      LessExpression();
    } else if (jj_2_19(2147483647)) {
      PlusExpression();
    } else if (jj_2_20(2147483647)) {
      MinusExpression();
    } else if (jj_2_21(2147483647)) {
      TimesExpression();
    } else if (jj_2_22(2147483647)) {
      SubExpression();
    } else if (jj_2_23(2147483647)) {
      ArrayLookup();
    } else if (jj_2_24(2147483647)) {
      ArrayLength();
    } else if (jj_2_25(2147483647)) {
      MessageSend();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LPAREN:
      case NOT:
      case FALSE:
      case NEW:
      case THIS:
      case TRUE:
      case INTEGER_LITERAL:
      case CHAR_LITERAL:
      case STRING_LITERAL:
      case IDENTIFIER:
        PrimaryExpression();
        break;
      default:
        jj_la1[16] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void AndExpression() throws ParseException {
    PrimaryExpression();
    jj_consume_token(57);
    PrimaryExpression();
  }

  static final public void OrExpression() throws ParseException {
    PrimaryExpression();
    jj_consume_token(58);
    PrimaryExpression();
  }

  static final public void EqualExpression() throws ParseException {
    PrimaryExpression();
    jj_consume_token(61);
    PrimaryExpression();
  }

  static final public void GreatExpression() throws ParseException {
    PrimaryExpression();
    jj_consume_token(59);
    PrimaryExpression();
  }

  static final public void LessExpression() throws ParseException {
    PrimaryExpression();
    jj_consume_token(LT);
    PrimaryExpression();
  }

  static final public void PlusExpression() throws ParseException {
    PrimaryExpression();
    jj_consume_token(PLUS);
    PrimaryExpression();
  }

  static final public void MinusExpression() throws ParseException {
    PrimaryExpression();
    jj_consume_token(MINUS);
    PrimaryExpression();
  }

  static final public void TimesExpression() throws ParseException {
    PrimaryExpression();
    jj_consume_token(53);
    PrimaryExpression();
  }

  static final public void SubExpression() throws ParseException {
    PrimaryExpression();
    jj_consume_token(60);
    PrimaryExpression();
  }

  static final public void ArrayLookup() throws ParseException {
    PrimaryExpression();
    jj_consume_token(LSQPAREN);
    PrimaryExpression();
    jj_consume_token(RSQPAREN);
  }

  static final public void ArrayLength() throws ParseException {
    PrimaryExpression();
    jj_consume_token(DOT);
    jj_consume_token(LENGTH);
  }

  static final public void MessageSend() throws ParseException {
    PrimaryExpression();
    jj_consume_token(DOT);
    Identifier();
    jj_consume_token(LPAREN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LPAREN:
    case NOT:
    case FALSE:
    case NEW:
    case THIS:
    case TRUE:
    case INTEGER_LITERAL:
    case CHAR_LITERAL:
    case STRING_LITERAL:
    case IDENTIFIER:
      ExpressionList();
      break;
    default:
      jj_la1[17] = jj_gen;
      ;
    }
    jj_consume_token(RPAREN);
  }

  static final public void ExpressionList() throws ParseException {
    Expression();
    label_13:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 54:
        ;
        break;
      default:
        jj_la1[18] = jj_gen;
        break label_13;
      }
      ExpressionRest();
    }
  }

  static final public void ExpressionRest() throws ParseException {
    jj_consume_token(54);
    Expression();
  }

  static final public void PrimaryExpression() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_LITERAL:
      IntegerLiteral();
      break;
    case CHAR_LITERAL:
      CharConstant();
      break;
    case STRING_LITERAL:
      StringConstant();
      break;
    case TRUE:
      TrueLiteral();
      break;
    case FALSE:
      FalseLiteral();
      break;
    case IDENTIFIER:
      Identifier();
      break;
    case THIS:
      ThisExpression();
      break;
    default:
      jj_la1[19] = jj_gen;
      if (jj_2_26(3)) {
        ArrayAllocationExpression();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NEW:
          AllocationExpression();
          break;
        case NOT:
          NotExpression();
          break;
        case LPAREN:
          BracketExpression();
          break;
        default:
          jj_la1[20] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
  }

  static final public void IntegerLiteral() throws ParseException {
    jj_consume_token(INTEGER_LITERAL);
  }

  static final public void CharConstant() throws ParseException {
    jj_consume_token(CHAR_LITERAL);
  }

  static final public void StringConstant() throws ParseException {
    jj_consume_token(STRING_LITERAL);
  }

  static final public void TrueLiteral() throws ParseException {
    jj_consume_token(TRUE);
  }

  static final public void FalseLiteral() throws ParseException {
    jj_consume_token(FALSE);
  }

  static final public void Identifier() throws ParseException {
    jj_consume_token(IDENTIFIER);
  }

  static final public void ThisExpression() throws ParseException {
    jj_consume_token(THIS);
  }

  static final public void ArrayAllocationExpression() throws ParseException {
    jj_consume_token(NEW);
    jj_consume_token(INTEGER);
    jj_consume_token(LSQPAREN);
    Expression();
    jj_consume_token(RSQPAREN);
  }

  static final public void AllocationExpression() throws ParseException {
    jj_consume_token(NEW);
    Identifier();
    jj_consume_token(LPAREN);
    jj_consume_token(RPAREN);
  }

  static final public void NotExpression() throws ParseException {
    jj_consume_token(NOT);
    Expression();
  }

  static final public void BracketExpression() throws ParseException {
    jj_consume_token(LPAREN);
    Expression();
    jj_consume_token(RPAREN);
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  static private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  static private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  static private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  static private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  static private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  static private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  static private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  static private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  static private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  static private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  static private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  static private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  static private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  static private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  static private boolean jj_2_22(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }
